# GOSH-FHIRworks2020-Docugen

./: .gitmodules  .travis.yml  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
docugen/: all.html  index.html  sidebar-items.js
docugen/config/: enum.ConfigError.html  enum.LogLevel.html  fn.read_config_from_path.html  index.html  sidebar-items.js  struct.DocugenConfig.html  struct.LoggingConfig.html  struct.WebApiConfig.html  type.ConfigResult.html
docugen/document/: enum.Partial.html  enum.TemplateError.html  index.html  sidebar-items.js  struct.DocumentTemplate.html  struct.FilledDocument.html  struct.TagPair.html  type.Identifier.html
docugen/parser/: fn.document_template.html  fn.partial.html  fn.string_literal.html  fn.tag.html  index.html  sidebar-items.js
docugen_bin/: all.html  fn.main.html  index.html  sidebar-items.js  struct.CONFIG.html
futures_channel/mpsc/: struct.SendError.html  struct.TryRecvError.html  struct.TrySendError.html
futures_channel/oneshot/: struct.Canceled.html
futures_core/task/: enum.Poll.html
futures_task/: enum.Poll.html  index.html  struct.FutureObj.html  struct.LocalFutureObj.html  struct.RawWakerVTable.html  struct.SpawnError.html  struct.Waker.html  trait.LocalSpawn.html
futures_util/future/: enum.Either.html  index.html  struct.FutureObj.html  trait.FusedFuture.html  (+4 more)
gosh_fhirworks2020_docugen/: .gitignore  Cargo.toml  README.md  config.example.toml  template.template
gosh_fhirworks2020_docugen/src/: cli.rs  config.rs  document.rs  lib.rs  main.rs  parser.rs
gosh_fhirworks2020_docugen/src/core/: document.rs  mod.rs  parser.rs
gosh_fhirworks2020_docugen/src/data/: fhir_date.rs  mod.rs  patient.rs
gosh_fhirworks2020_docugen/src/web/: bundle.rs  mod.rs
gosh_fhirworks2020_docugen/tests/: document.rs
http/: struct.Error.html
hyper/: struct.Body.html  struct.HeaderMap.html  struct.Method.html  struct.Request.html  struct.StatusCode.html  struct.Uri.html
hyper_tls/: struct.HttpsConnecting.html
native_tls/: struct.TlsStream.html
pom/: all.html  enum.Error.html  index.html  type.Parser.html  type.Result.html
reqwest/: index.html  struct.Body.html  struct.Client.html  struct.ClientBuilder.html  struct.Error.html  struct.Method.html  struct.Request.html  struct.RequestBuilder.html  struct.Response.html  struct.StatusCode.html  struct.Url.html  trait.ResponseBuilderExt.html
syn/: struct.Error.html
termcolor/: struct.ParseColorError.html
(+204 files in other folders)
