[package]
name = "gosh_fhirworks2020_docugen"
version = "0.1.0"
authors = ["许杰友 Jieyou Xu (Joe) <jieyouxu@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "docugen"
path = "src/lib.rs"

[[bin]]
name = "docugen_bin"
path = "src/main.rs"

[dependencies]
lazy_static = "1.4.0"
toml = "0.5.6"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
log = "0.4.8"
env_logger = "0.7.1"
reqwest = "0.10.3"
pom = "3.1.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
tempfile = "3.1.0"
