[package]
name = "gosh_fhirworks2020_docugen"
description = "A document generator for GOSH Drive FHIRworks2020 Hackathon"
homepage = "https://github.com/jieyouxu/GOSH-FHIRworks2020-Docugen"
repository = "https://github.com/jieyouxu/GOSH-FHIRworks2020-Docugen"
license = "MIT"
version = "0.1.0"
keywords = ["report-generator", "document-generator", "template"]
categories = ["template-engine", "value-formatting"]
authors = ["许杰友 Jieyou Xu (Joe) <jieyouxu@outlook.com>"]
edition = "2018"

[badges]
travis-ci = { repository = "jieyouxu/GOSH-FHIRworks2020-Docugen", branch = "master" }
codecov = { repository = "jieyouxu/GOSH-FHIRworks2020-Docugen", branch = "master" }
maintenance = { status = "passively-maintained" }

[lib]
name = "docugen"
path = "src/lib.rs"

[[bin]]
name = "docugen_bin"
path = "src/main.rs"

[dependencies]
lazy_static = "1.4.0"
toml = "0.5.6"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
log = "0.4.8"
pom = "3.1.0"
clap = { version = "2.33.0", features = ["color"] }
pretty_env_logger = "0.4.0"
reqwest = { version = "0.10.4", features = ["json"] }
tokio = { version = "0.2.13", features = ["full"] }

[dev-dependencies]
pretty_assertions = "0.6.1"
